--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "repo-find-orphans"
 authors = ["Vlad <vlad@v-lad.org>"]
 description = "Supplements to the repo script"
-version = "0.0.1"
+version = "0.0.3"
 readme = "README.md"
 
 packages = [
@@ -35,7 +35,7 @@ defusedxml = "^0.7.1"
 typer = "^0.12.3"
 
 [tool.poetry.scripts]
-repo-orphans = "repo_find_orphans.cli:app"
+repo-find-orphans = "repo_find_orphans.cli:app"
 
 
 
