--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "repo-find-orphans"
 authors = ["Vlad <vlad@v-lad.org>"]
 description = "Supplements to the repo script"
-version = "0.0.3"
+version = "0.0.5"
 readme = "README.md"
 
 packages = [
@@ -29,7 +29,7 @@ Issues = "https://github.com/vladistan/repo-find-orphans/issues"
 
 
 [tool.poetry.dependencies]
-python = "3.11.2"
+python = "^3.11.0"
 annotated-types = "^0.6.0"
 defusedxml = "^0.7.1"
 typer = "^0.12.3"
