Add support for finding remote orphans

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "repo-find-orphans"
 authors = ["Vlad <vlad@v-lad.org>"]
 description = "Supplements to the repo script"
-version = "0.0.5"
+version = "0.1.1"
 readme = "README.md"
 
 packages = [
@@ -33,6 +33,9 @@ python = "^3.11.0"
 annotated-types = "^0.6.0"
 defusedxml = "^0.7.1"
 typer = "^0.12.3"
+pygithub = "^2.3.0"
+pyyaml = "^6.0.1"
+types-pyyaml = "^6.0.12.20240311"
 
 [tool.poetry.scripts]
 repo-find-orphans = "repo_find_orphans.cli:app"
